Kncs.Webhook/manifests/deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kncs-system


---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kncs-webhook
    kncs: webhook
  name: kncs-webhook
  namespace: kncs-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      kncs: webhook
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
        k8s.jijiechen.com/inject-dotnet-helper: "false"
      labels:
        kncs: webhook
    spec:
      containers:
        - env:
            - name: BLOCKED_REPOS
              value: abcd.com
            - name: ASPNETCORE_URLS
              value: 'https://+:443'
            - name: ASPNETCORE_Kestrel__Certificates__Default__Path
              value: /etc/kncs/certs/tls.crt
            - name: ASPNETCORE_Kestrel__Certificates__Default__KeyPath
              value: /etc/kncs/certs/tls.key
#            - name: Logging__LogLevel__Default
#              value: Debug
#            - name: Logging__LogLevel__Microsoft.AspNetCore
#              value: Debug
#            - name: DEBUG
#              value: 'true'
#            - name: Microsoft__AspNetCore__HttpLogging__HttpLoggingMiddleware
#              value: Information
          image: jijiechen-docker.pkg.coding.net/sharpcr/kncs/webhook:0515
          imagePullPolicy: IfNotPresent
          name: webhook
          ports:
            - containerPort: 443
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - mountPath: /etc/kncs/certs
              name: certs
      restartPolicy: Always
      schedulerName: default-scheduler
      volumes:
        - name: certs
          secret:
            defaultMode: 420
            secretName: kncs-server-certs


---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: kncs-webhook
  name: kncs-webhook
  namespace: kncs-system
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    kncs: webhook
  sessionAffinity: None
  type: ClusterIP



---

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-kncs
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZzVENDQTVtZ0F3SUJBZ0lKQU1LNnNwL3N3Uzl5TUEwR0NTcUdTSWIzRFFFQkN3VUFNRzh4Q3pBSkJnTlYKQkFZVEFrTk9NUkF3RGdZRFZRUUlEQWRDWldscWFXNW5NUkV3RHdZRFZRUUhEQWhEYUdGdmVXRnVaekVQTUEwRwpBMVVFQ2d3R1JHVjJUM0J6TVF3d0NnWURWUVFMREFOUVMwa3hIREFhQmdOVkJBTU1FMFJsZGs5d2N5QkhaVzVsCmNtbGpJRkp2YjNRd0hoY05Nakl3TlRFMU1EZzBNRE14V2hjTk16SXdOVEV5TURnME1ETXhXakJ2TVFzd0NRWUQKVlFRR0V3SkRUakVRTUE0R0ExVUVDQXdIUW1WcGFtbHVaekVSTUE4R0ExVUVCd3dJUTJoaGIzbGhibWN4RHpBTgpCZ05WQkFvTUJr [...]
      service:
        name: kncs-webhook
        namespace: kncs-system
        path: /validate
        port: 443
    failurePolicy: Fail
    name: image-validator.kncs.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - pods
        scope: '*'
    sideEffects: None
    timeoutSeconds: 30

---

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-kncs
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZzVENDQTVtZ0F3SUJBZ0lKQU1LNnNwL3N3Uzl5TUEwR0NTcUdTSWIzRFFFQkN3VUFNRzh4Q3pBSkJnTlYKQkFZVEFrTk9NUkF3RGdZRFZRUUlEQWRDWldscWFXNW5NUkV3RHdZRFZRUUhEQWhEYUdGdmVXRnVaekVQTUEwRwpBMVVFQ2d3R1JHVjJUM0J6TVF3d0NnWURWUVFMREFOUVMwa3hIREFhQmdOVkJBTU1FMFJsZGs5d2N5QkhaVzVsCmNtbGpJRkp2YjNRd0hoY05Nakl3TlRFMU1EZzBNRE14V2hjTk16SXdOVEV5TURnME1ETXhXakJ2TVFzd0NRWUQKVlFRR0V3SkRUakVRTUE0R0ExVUVDQXdIUW1WcGFtbHVaekVSTUE4R0ExVUVCd3dJUTJoaGIzbGhibWN4RHpBTgpCZ05WQkFvTUJr [...]
      service:
        name: kncs-webhook
        namespace: kncs-system
        path: /mutate
        port: 443
    failurePolicy: Fail
    name: dotnet-helper-injector.kncs.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - pods
        scope: '*'
    sideEffects: None
    timeoutSeconds: 30
